--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap');
+@import "utilidades/tipografia.css";
+@import "utilidades/cores.css";
 @import "global/header.css";
-@import "global/global.css";
 @import "home/introducao.css";
-@import "utilidades/componentes.css"
+@import "utilidades/componentes.css";
+@import "bicicletas/bicicletas-lista.css";
+@import "global/global.css";
