--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,15 +1,11 @@
 .introducao-bg {
     background-color: var(--c12);
-    box-shadow: inset 0 -120px var(--c00);
+    box-shadow: inset 0 -80px var(--c00);
 }
 .introducao {
     display: grid; 
     grid-template-columns: 1fr 1fr;
     gap: 0px  40px;
-    box-sizing: border-box;
-    max-width: 1200px;
-    padding: 0px 20px;
-    margin: 0 auto;
 }
 .introducao-conteudo {
     align-self: end;
@@ -18,6 +14,7 @@
 }
 .introducao img {
     height: 100%;
+    width: 100%;
     object-fit: cover;
     border-radius: 5px;
 }
