--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,11 @@
+.conteiner {
+    max-width: 1200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+}
 .button {
     font: 600 1.125rem/1.35 "Poppins", Arial, sans-serif;
     padding: 16px 32px;
@@ -11,6 +19,23 @@
 }
 .button:hover {
     background:linear-gradient( var(--p02),  var(--p03));
+}
+
+.link {
+    display: inline-block;
+    color: var(--p01);
+    font: 500 1.5rem/1.5 "Poppins", sans-serif;
+    text-transform: uppercase;
+}
+.link::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+}
+.link:hover {
+    color: var(--p03);
 }
 @media (max-width: 600px) {
     .introducao a {
