--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap');
+@import "global/header.css";
+@import "global/global.css";
 @import "utilidades/tipografia.css";
 @import "utilidades/cores.css";
-@import "global/header.css";
-@import "home/introducao.css";
-@import "home/tecnologia.css";
 @import "utilidades/componentes.css";
 @import "bicicletas/bicicletas-lista.css";
-@import "global/global.css";
+@import "home/introducao.css";
+@import "home/tecnologia.css";
+@import "home/parceiros.css";
+@import "home/depoimento.css";
