--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -12,13 +12,22 @@
     border-radius: 5px;
     display: inline-block;
     color: var(--p05);
-    background:linear-gradient( var(--p01),  var(--p03));
+    background: linear-gradient(#ffbf00, #f2a50c);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     text-transform: uppercase;
     text-decoration: none;
+    max-width: max-content;
 }
 .button:hover {
-    background:linear-gradient( var(--p02),  var(--p03));
+    background:linear-gradient( var(--p01),  var(--p03));
+}
+
+.button.secundario {
+    background: var(--c10);
+    color: var(--c00);
+}
+.button.secundario:hover {
+    background: var(--c09);
 }
 
 .link {
