--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap');
 @import "global/header.css";
 @import "global/global.css";
+@import "global/rodape.css";
 @import "utilidades/tipografia.css";
 @import "utilidades/cores.css";
 @import "utilidades/componentes.css";
