--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -46,6 +46,13 @@
 .link:hover {
     color: var(--p03);
 }
+
+.link.secundario {
+    color: var(--c10);
+}
+.link.secundario:hover {
+    color: var(--c09);
+}
 @media (max-width: 600px) {
     .introducao a {
         padding: 12px 16px;
