Criação páginas Bicicletas e Termos

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
 @import "utilidades/cores.css";
 @import "utilidades/componentes.css";
 @import "bicicletas/bicicletas-lista.css";
+@import "bicicletas/bicicletas.css";
 @import "home/introducao.css";
 @import "home/tecnologia.css";
 @import "home/parceiros.css";
 @import "home/depoimento.css";
 @import "seguros/seguros.css";
+@import "termos/termos.css";
