--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,5 +1,5 @@
 .bicicletas-bg {
-    background: var(--c11);
+    background-image: linear-gradient(to right, var(--c00) 30%, var(--c11) 0%);
 }
 .bicicletas {
     display: grid;
@@ -52,4 +52,44 @@
     place-self: start end;
     margin-top: 20px;
     border-radius: 5px 0px 0px 5px;
+}
+
+@media (max-width: 800px) {
+    .bicicletas-bg {
+        background: var(--c11);
+    }
+    .bicicletas {
+        grid-template-columns: 1fr;
+        gap: 20px;
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+    .bicicletas ul {
+        grid-template-columns: 1fr 1fr;
+        padding-bottom: 32px;
+    }
+    .bicicletas p {
+        padding-top: 18px;
+        padding-bottom: 18px;
+    }
+    .bicicletas a {
+        place-self: start;
+    }
+}
+@media (max-width: 600px) {
+    .bicicleta-conteudo {
+        grid-template-columns: 1fr;
+    }
+    .bicicletas ul {
+        grid-template-columns: 1fr 1fr;
+        margin-bottom: 32px;
+        font-size: 1rem;
+    }
+    .bicicletas p {
+        padding-top: 18px;
+        padding-bottom: 18px;
+    }
+    .bicicletas a {
+        place-self: start;
+    }
 }
