--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,6 @@
 @import "home/parceiros.css";
 @import "home/depoimento.css";
 @import "seguros/seguros.css";
+@import "seguros/vantagens.css";
+@import "seguros/perguntas.css";
 @import "termos/termos.css";
