--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -8,16 +8,16 @@
     padding-top: 60px;
     padding-bottom: 60px;
 }
-.bicicleta-conteudo {
+.bicicletas-conteudo {
     display: grid;
 }
-.bicicleta-conteudo p {
+.bicicletas-conteudo p {
     grid-column: 1/-1;
 }
-.bicicleta-conteudo a {
+.bicicletas-conteudo a {
     place-self: end;
 }
-.bicicleta-conteudo h2::before {
+.bicicletas-conteudo h2::before {
     content: "";
     display: block;
     height: 8px;
@@ -25,26 +25,26 @@
     margin-bottom: 5px;
     background-color: var(--p01);
 }
-.bicicleta-conteudo ul {
+.bicicletas-conteudo ul {
     display: grid;
     gap: 8px;
 }
-.bicicleta-conteudo li {
+.bicicletas-conteudo li {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.bicicleta-conteudo img {
+.bicicletas-conteudo img {
     width: 24px;
     height: 24px;
 }
-.bicicleta-imagem {
+.bicicletas-imagem {
     display: grid;
 }
-.bicicleta-imagem img {
+.bicicletas-imagem img {
     grid-area: 1/1;
 }
-.bicicleta-imagem span {
+.bicicletas-imagem span {
     display: inline-block;
     background: var(--c12);
     padding: 8px 16px 8px 8px;
@@ -77,7 +77,7 @@
     }
 }
 @media (max-width: 600px) {
-    .bicicleta-conteudo {
+    .bicicletas-conteudo {
         grid-template-columns: 1fr;
     }
     .bicicletas ul {
