--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import "utilidades/tipografia.css";
 @import "utilidades/cores.css";
 @import "utilidades/componentes.css";
+@import "utilidades/formulario.css";
 @import "bicicletas/bicicletas-lista.css";
 @import "bicicletas/bicicletas.css";
 @import "bicicleta/bicicleta.css";
@@ -16,4 +17,6 @@
 @import "seguros/vantagens.css";
 @import "seguros/perguntas.css";
 @import "bicicleta/seguro.css";
+@import "contato/contato.css";
+@import "contato/lojas.css";
 @import "termos/termos.css";
