--- a/css/contato/lojas.css
+++ b/css/contato/lojas.css
@@ -43,6 +43,7 @@
   gap: 8px;
   border-left: 2px solid var(--c03);
   padding-left: 12px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 800px) {
