--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -7,6 +7,7 @@
     gap: 40px;
     padding-top: 60px;
     padding-bottom: 60px;
+    background: url('../../img/dec/top-right.svg') no-repeat top 50px right 0px;
 }
 .bicicletas-conteudo {
     display: grid;
@@ -63,6 +64,7 @@
         gap: 20px;
         padding-top: 40px;
         padding-bottom: 40px;
+        background: none;
     }
     .bicicletas ul {
         grid-template-columns: 1fr 1fr;
