--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -12,7 +12,7 @@
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 .contato-dados{
-    background: var(--c12);
+    background: var(--c12) url('../../img/dec/bottom-left.svg') no-repeat bottom 20px left 20px;
     display: grid;
     grid-template-columns: 1fr;
     gap: 12px;
@@ -50,7 +50,7 @@
 }
 
 .contato-formulario {
-    background-color: var(--c00);
+    background: var(--c00) url('../../img/dec/bottom-right.svg') no-repeat bottom 20px right 20px;
     border-radius: 0 5px 5px 0;
 }
 
@@ -70,6 +70,8 @@
     }
     .contato-dados {
         border-radius: 5px 5px 0 0;
+        background: var(--c12);
+        
     }
     .contato-formulario {
         border-radius: 0 0 5px 5px;
