--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg {
-    background-color: var(--c12);
+    background: var(--c12) url('../../img/dec/bottom-left.svg') no-repeat bottom 120px left 20px;
     box-shadow: inset 0 -80px var(--c00);
 }
 .introducao {
