--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -8,6 +8,7 @@
     gap: 40px;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    background: url('../../img/dec/top-right.svg') no-repeat top 50px right 20px;
 }
 .seguros h2 {
     grid-column: 1/-1;
