--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -82,6 +82,9 @@
     padding-bottom: 60px;
     background-color: var(--c11);
 }
+.titulo {
+    background: url('../../img/dec/top-right.svg') no-repeat right 120px top 20px;
+}
 .titulo p {
     margin-bottom: 4px;
 }
