--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -13,21 +13,25 @@
     background-color: var(--c01);
 }
 
-.perguntas dt {
+.perguntas button {
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
     gap: 8px;
     cursor: pointer;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
 }
-.perguntas dt::before {
+.perguntas button::before {
     content: '';
     display: inline-block;
     height: 8px;
     width: 12px;
     background-color: var(--p01);
 }
-.perguntas dt::after {
+.perguntas button::after {
     content: '';
     display: inline-block;
     height: 6px;
@@ -36,8 +40,16 @@
     background-image: url("../../img/icones/seta-abrir.svg");
     transition: 0.5s;
 }
-.perguntas dt:hover::after {
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after {
     transform: rotate(180deg);
+}
+
+.perguntas dd {
+    display: none;
+}
+.perguntas dd.ativa {
+    display: block;
 }
 
 .perguntas dd {
