--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "global/rodape.css";
 @import "utilidades/tipografia.css";
 @import "utilidades/cores.css";
+@import "utilidades/animacao.css";
 @import "utilidades/componentes.css";
 @import "utilidades/formulario.css";
 @import "bicicletas/bicicletas-lista.css";
